Changes in index

--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
     </title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello World. I would like to present you how good I am</h1>
 </body>
 </html>
